# rag-client

./: #rag.py#  .flake8  .gitignore  CLAUDE.md  LICENSE  LICENSE.md  Makefile  README.md  ai-old.py  ai.py  api.py  app.py  audit-kinesis.sh  chat.py  chat.yaml  client.py  flake.nix  guidance.yaml  lefthook.yml  main.py  main_test.py  pact.yaml  prd.md  prd.txt  pyproject.toml  query-test.sh  rag-client.py  rag.py  rag.py.backup  rag_client.py  rag_compat.py  requirements.txt  setup.py  test_config.yaml  test_rag.py  test_rag_client.py  test_union.py  test_union2.py  test_union3.py  validation_report.md
.claude/: settings.local.json
.github/workflows/: ci.yml
.taskmaster/: state.json
.taskmaster/docs/: architecture-diagrams.md  configuration-classes.md  llama-index-dependencies.md  module-dependencies.md  provider-implementations.md  public-apis-cli-commands.md  ragworkflow-architecture.md
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: tasks.json
examples/: README.md  basic_indexing.py
examples/configs/: basic.yaml  openai.yaml  postgres.yaml
rag_client/: __init__.py  exceptions.py  schemas.py  types.py
rag_client/api/: error_handlers.py  server.py
rag_client/cli/: commands.py  simple.py
rag_client/config/: base.py  chunking.py  embeddings.py  extractors.py  llms.py  loader.py  migrate.py  models.py  models.py.broken
rag_client/core/: async_processing.py  batch_optimizer.py  models.py  retrieval.py  workflow.py
rag_client/embeddings/: providers.py
rag_client/llm/: providers.py
rag_client/mcp/: __init__.py  server.py  tools.py
rag_client/providers/: __init__.py  base.py  factory.py
rag_client/storage/: __init__.py  cache.py  postgres.py
rag_client/utils/: __init__.py  helpers.py  logging.py  logging_config.py  readers.py  retry.py
tests/: test_api.py  test_benchmarks.py  test_config.py  test_fuzz.py
